# RAGChat

./: Dockerfile  README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  requirements.txt  services.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/2c520291-ff80-4c73-9a0c-119ab4569ab9/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/3c4bfa92-b282-4c9f-8ce2-3077cc22de13/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/426d89f4-3585-46b9-9d94-9025a10a92b6/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/9ebb8e5f-c0cf-480b-9545-511e0ad060f8/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/caf83ef1-c183-4e24-bcb3-99f02e059932/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/ef6b5a7b-1b3a-43c1-bef8-25ab3e2646ce/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/f3a4e777-371b-442d-b5dd-96b4f6638632/: mutable_id_tracker.mappings
static/: index.html  style.css
