[project]
name = "rag-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "inngest>=0.5.18",
    "langchain>=1.3.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "llama-index-core>=0.14.22",
    "llama-index-readers-file>=0.6.0",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.0",
    "uvicorn>=0.47.0",
]
